--- a/index.html
+++ b/index.html
@@ -5,28 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exam</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="hero">
         <img src="./img/justice-league.jpg" alt="Marvel">
-        <h2>
-            JUSTICE LEAGUE
-        </h2>
-        <p>
-            You can't save the world alone.
-        </p>
-        <h2>$28.00</h2>
-        <h3>$44.99</h3>
-        <button>BUY NOW</button>
+
+        <div>
+
+            <h2 class="name">
+                JUSTICE LEAGUE
+            </h2>
+            <p>
+                You can't save the world alone.
+            </p>
+            <h2>$28.00</h2>
+            <h3>$44.99</h3>
+            <button>BUY NOW</button>
+
+        </div>
     </div>
 
     <div class="fantastic">
         <img src="./img/blade-runner.jpg" alt="Blade-runner">
-        <h2>BLADE RUNNER</h2>
-        <!-- <p></p> -->
-        <h2>$20.75</h2>
-        <h3>$40.99</h3>
-        <button>BUY NOW</button>
+        <div>
+
+            <h2 class="name">
+                BLADE RUNNER
+            </h2>
+            <!-- <p></p> -->
+            <h2>$20.75</h2>
+            <h3>$40.99</h3>
+            <button>BUY NOW</button>
+            
+        </div>
     </div>
 </body>
 </html>
